--- a/style.css
+++ b/style.css
@@ -6,6 +6,7 @@
   text-decoration: none;
 }
 
+/* header section starts here */
 header {
   width: 100%;
   background-color: red;
@@ -19,6 +20,8 @@ header {
   background-color: black;
   display: flex;
   position: fixed;
+  border-end-end-radius: 22px;
+  border-end-start-radius: 22px;
 }
 
 .wrapper,
@@ -32,7 +35,6 @@ a {
 }
 
 /* hero section starts here  */
-
 .hero {
   width: 100%;
   height: 90vh;
@@ -40,23 +42,31 @@ a {
 }
 
 .ins-hero {
-  padding-top: 100px;
   width: 100%;
   height: 95vh;
-  color:white;
+  color: white;
   background-color: blue;
   border-radius: 29px;
 }
 
+.ins-hero,
+img {
+  width: 100%;
+  border-radius: 29px;
+  object-fit: fill;
+}
+
 .hero-h3 {
+  position: absolute;
   margin-left: 60px;
   margin-bottom: -50px;
-  margin-top: 70px;
+  margin-top: -470px;
 }
 
 .hero-h2 {
+  position: absolute;
   margin-left: 60px;
-  margin-top: 70px;
+  margin-top: -370px;
   font-size: 55px;
 }
 
@@ -101,17 +111,15 @@ a {
   margin-left: 60px;
   margin-top: 40px;
   font-size: 18px;
-  font-weight:800;
+  font-weight: 800;
 }
 
-.cnt-heading{
+.cnt-heading {
   color: white;
-  font-size:44px;
+  font-size: 44px;
   margin-left: 60px;
   margin-top: 70px;
 }
-
-
 
 
 /* cnt 3 starts here */
@@ -119,4 +127,31 @@ a {
   width: 100%;
   height: 90vh;
   background-color: red;
+  display:flex;
+  justify-content: space-around;
+  padding-top:60px;
+  flex-wrap: wrap;
+  row-gap:1px;
 }
+
+/* info card 1 */
+.info-cnt1{
+  background-color:yellow;
+  height:100px;
+  width:40%;
+ 
+}
+
+.cnt1-img{
+  height:100px;
+  width:100px;
+}
+
+.cnt1h1{
+  position:absolute;
+  padding-left:150px;
+  padding-top:10px;
+}
+
+
+/* info card 2 */
