--- a/style.css
+++ b/style.css
@@ -121,37 +121,44 @@ img {
   margin-top: 70px;
 }
 
-
 /* cnt 3 starts here */
 .cnt-3 {
   width: 100%;
   height: 90vh;
-  background-color: red;
-  display:flex;
+  background-color: black;
+  display: flex;
   justify-content: space-around;
-  padding-top:60px;
+  padding-top: 60px;
   flex-wrap: wrap;
-  row-gap:1px;
+  row-gap: 1px;
 }
 
 /* info card 1 */
-.info-cnt1{
-  background-color:yellow;
-  height:100px;
-  width:40%;
- 
+.info-cnt1 {
+  background-color: yellow;
+  height: 100px;
+  width: 40%;
 }
 
-.cnt1-img{
-  height:100px;
-  width:100px;
+.cnt1-img {
+  height: 100px;
+  width: 100px;
 }
 
-.cnt1h1{
-  position:absolute;
-  padding-left:150px;
-  padding-top:10px;
+.cnt1h1 {
+  position: absolute;
+  padding-left: 150px;
+  padding-top: 10px;
+  color: white;
 }
 
+/* section 3 starts here  */
 
-/* info card 2 */
+.cnt-4 {
+  width: 100%;
+  height: 50vh;
+  background-color: red;
+}
+
+/* @media screen (max-width: 1000px) {
+} */
