--- a/mediaquiries.css
+++ b/mediaquiries.css
@@ -1,14 +1,43 @@
 /* /LAPTOP VIEW (>1024px)  */
 @media (min-width: 1025px) {
-
 }
 
 /* TABLET VIEW (601px - 1024px)  */
 @media (max-width: 1024px) and (min-width: 601px) {
-
 }
 
 /* MOBILE VIEW (≤600px) */
 @media (max-width: 600px) {
+  .cnt-5 {
+    width: 100%;
+    height: 150vh;
+    background-color: black;
+    display: flex;
+    justify-content: space-around;
+    row-gap: -110px;
+    flex-wrap: wrap;
+  }
 
+  .cnt5-box1 {
+    margin-top: 50px;
+    height: 350px;
+    width: 30%;
+    background-color: wheat;
+  }
+
+  .cnt5-txt {
+    padding-top: 10px;
+    padding-left: 20px;
+    font-size: 22px;
+    font-weight: 300;
+    font-family: "Public Sans", sans-serif;
+  }
+
+  .cnt5-para {
+    padding-top: 20px;
+    padding-left: 20px;
+    font-size: 12px;
+    font-weight: 300;
+    font-family: "Public Sans", sans-serif;
+  }
 }
